fix modal on ios

--- a/app/components/modals/Modal.module.scss
+++ b/app/components/modals/Modal.module.scss
@@ -7,11 +7,14 @@
     @include media-breakpoint-up (sm) {
       margin-bottom: $spacing-vertical-sm-1;
     }
-
+    align-self: start;
     align-items: center;
     display: flex;
+    flex-flow: row;
+    flex: 1 1 auto;
     justify-content: flex-end;
     width: 100%;
+    height: 1rem;
   }
 
   .body {
