--- a/app/components/shared/Panel.module.scss
+++ b/app/components/shared/Panel.module.scss
@@ -8,8 +8,8 @@
   background-color: $neu-white-two;
   box-shadow: $shadow-bottom-black;
   padding: $padding;
-
-  align-content: stretch;
+  height: 100%;
+  align-items: stretch;
   justify-items: start;
 
   & > div {
